--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-01/node_modules
-01/dist
-01/.parcel-cache
-
-02/node_modules
-02/dist
-02/.parcel-cache
-
-03/node_modules
-03/dist
-03/.parcel-cache
+*/node_modules
+*/dist
+*/.parcel-cache
